--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -24,7 +24,7 @@
 </nb-card>
 
 <!--insert modal-->
-<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" name="addModal">
+<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -35,7 +35,7 @@
       </div>
       <div class="modal-body">
 
-        <form>
+        <form #addForm="ngForm">
 
           <div class = "form-group">
             <label for = "type">Science Unit Type:</label>
@@ -49,112 +49,155 @@
 
             <div class = "form-group input-group-sm">
               <label for = "users">Bind to Users</label>
-              <ng-select type = "text" id = "users" name = "users"
+              <ng-select type = "text" id = "users" name = "users" required #users="ngModel"
                 [options]="options"
                 [multiple]="true"
                 [(ngModel)]="model.users">
               </ng-select>
+              <small *ngIf="users.errors && (users.dirty || users.touched)" class="form-text error">
+                <p>Users binding is required!</p>
+              </small>
             </div>
 
             <div class = "form-group input-group-sm">
               <label for = "name">Name</label>
               <input type = "text" class = "form-control" id = "name"
                      [(ngModel)] = "model.name" name = "name" #name="ngModel" required>
+              <small *ngIf="name.errors && (name.dirty || name.touched)" class="form-text error">
+                <p>Name field is required!</p>
+              </small>
             </div>
-            <small *ngIf="name.errors && (name.dirty || name.touched)" class="form-text error">
-              <p>Name field is required!</p>
-            </small>
 
             <div class = "form-group input-group-sm">
-              <label for = "name">Title</label>
-              <input type = "text" class = "form-control" id = "title"
+              <label for = "title">Title</label>
+              <input type = "text" class = "form-control" id = "title" required #title="ngModel"
                      [(ngModel)] = "model.title" name = "title">
+              <small *ngIf="title.errors && (title.dirty || title.touched)" class="form-text error">
+                <p>Title field is required!</p>
+              </small>
             </div>
 
             <div class = "form-group input-group-sm">
               <label for = "year">Year</label>
-              <input type = "text" class = "form-control input-sm" id = "year"
+              <input type = "number" class = "form-control input-sm" id = "year" required #year="ngModel"
                      [(ngModel)] = "model.year" name = "year">
+              <small *ngIf="year.errors && (year.dirty || year.touched)" class="form-text error">
+                <p>Year field is required!</p>
+              </small>
             </div>
 
             <div class = "form-group input-group-sm">
-              <label for = "year">Url</label>
-              <input type = "text" class = "form-control input-sm" id = "Url"
-                     [(ngModel)] = "model.url" name = "Url">
+              <label for = "url">Url</label>
+              <input type = "text" class = "form-control input-sm" id = "url" required #url="ngModel"
+                     [(ngModel)] = "model.url" name = "url">
+              <small *ngIf="url.errors && (url.dirty || url.touched)" class="form-text error">
+                <p>URL field is required!</p>
+              </small>
             </div>
 
             <div class = "form-group input-group-sm">
               <label for = "author">Author</label>
-              <input type = "text" class = "form-control input-sm" id = "author"
+              <input type = "text" class = "form-control input-sm" id = "author" required #author="ngModel"
                      [(ngModel)] = "model.author" name = "author">
+              <small *ngIf="author.errors && (author.dirty || author.touched)" class="form-text error">
+                <p>Author field is required!</p>
+              </small>
             </div>
+
           </div>
 
           <!--Present on Chapter and Conference-->
           <div class = "form-group input-group-sm" *ngIf="isBookTitleShouldBePresent()">
             <label for = "bookTitle">Book Title</label>
-            <input type = "text" class = "form-control input-sm" id = "bookTitle"
+            <input type = "text" class = "form-control input-sm" id = "bookTitle" required #bookTitle="ngModel"
                    [(ngModel)] = "model.bookTitle" name = "bookTitle">
+            <small *ngIf="bookTitle.errors && (bookTitle.dirty || bookTitle.touched)" class="form-text error">
+              <p>Book Title field is required!</p>
+            </small>
           </div>
 
           <!--Journal and Other-->
           <div class = "form-group input-group-sm" *ngIf="isJournalShouldBePresent()">
             <label for = "journal">Journal</label>
-            <input type = "text" class = "form-control input-sm" id = "journal"
+            <input type = "text" class = "form-control input-sm" id = "journal" required #journal="ngModel"
                    [(ngModel)] = "model.journal" name = "journal">
-          </div>
+            <small *ngIf="journal.errors && (journal.dirty || journal.touched)" class="form-text error">
+              <p>Journal field is required!</p>
+            </small>
 
+          </div>
           <!--Present on Book and Journal-->
           <div class = "form-group input-group-sm" *ngIf="isPublisherShouldBePresent()">
             <label for = "publisher">Publisher</label>
-            <input type = "text" class = "form-control input-sm" id = "publisher"
+            <input type = "text" class = "form-control input-sm" id = "publisher" required #publisher="ngModel"
                    [(ngModel)] = "model.publisher" name = "publisher">
+            <small *ngIf="publisher.errors && (publisher.dirty || publisher.touched)" class="form-text error">
+              <p>Publisher field is required!</p>
+            </small>
           </div>
 
           <!--Chapter and Conference field-->
           <div class = "form-group input-group-sm" *ngIf="isOrganizationShouldBePresent()">
             <label for = "organization">Organization</label>
-            <input type = "text" class = "form-control input-sm" id = "organization"
+            <input type = "text" class = "form-control input-sm" id = "organization" required #organization="ngModel"
                    [(ngModel)] = "model.organization" name = "organization">
+            <small *ngIf="organization.errors && (organization.dirty || organization.touched)" class="form-text error">
+              <p>Organization field is required!</p>
+            </small>
           </div>
 
           <!--Present on every type except Other, Patent and Thesis-->
           <div class = "form-group input-group-sm" *ngIf="isVolumeShouldBePresent()">
             <label for = "volume">Volume</label>
-            <input type = "text" class = "form-control input-sm" id = "volume"
+            <input type = "number" class = "form-control input-sm" id = "volume" required #volume="ngModel"
                    [(ngModel)] = "model.volume" name = "volume">
+            <small *ngIf="volume.errors && (volume.dirty || volume.touched)" class="form-text error">
+              <p>Volume field is required!</p>
+            </small>
           </div>
 
           <!--Everywhere except Patent, Thesis, Book-->
           <div class = "form-group input-group-sm" *ngIf="isNumberShouldBePresent()">
             <label for = "number">Number</label>
-            <input type = "text" class = "form-control input-sm" id = "number"
+            <input type = "number" class = "form-control input-sm" id = "number" required #number="ngModel"
                    [(ngModel)] = "model.number" name = "number">
+            <small *ngIf="number.errors && (number.dirty || number.touched)" class="form-text error">
+              <p>Number field is required!</p>
+            </small>
           </div>
 
           <!--Chapter Conference Journal-->
           <div class = "form-group input-group-sm" *ngIf="isPagesShouldBePresent()">
             <label for = "pages">Pages</label>
-            <input type = "text" class = "form-control input-sm" id = "pages"
+            <input type = "number" class = "form-control input-sm" id = "pages" required #pages="ngModel"
                    [(ngModel)] = "model.pages" name = "pages">
+            <small *ngIf="pages.errors && (pages.dirty || pages.touched)" class="form-text error">
+              <p>Pages field is required!</p>
+            </small>
           </div>
 
           <!--Under Patent-->
           <div class = "form-group input-group-sm" *ngIf="isNoteShouldBePresent()">
             <label for = "note">Note</label>
-            <input type = "text" class = "form-control input-sm" id = "note"
+            <input type = "text" class = "form-control input-sm" id = "note" required #note="ngModel"
                    [(ngModel)] = "model.note" name = "note">
+            <small *ngIf="note.errors && (note.dirty || note.touched)" class="form-text error">
+              <p>Note field is required!</p>
+            </small>
           </div>
 
           <!--Under Thesis-->
           <div class = "form-group input-group-sm" *ngIf="isSchoolShouldBePresent()">
             <label for = "school">School</label>
-            <input type = "text" class = "form-control input-sm" id = "school"
+            <input type = "text" class = "form-control input-sm" id = "school" required #school="ngModel"
                    [(ngModel)] = "model.school" name = "school">
+            <small *ngIf="school.errors && (school.dirty || school.touched)" class="form-text error">
+              <p>School field is required!</p>
+            </small>
           </div>
 
           <div *ngIf="model.unitType != null">
-            <input type="button" class="btn btn-info" value="Save" (click)="saveUnit()">
+            <input type="button" class="btn btn-info" value="Save" (click)="saveUnit()" [disabled] ="!addForm.form.valid">
           </div>
 
         </form>
